better constant list initialization